# dictype

./: .clang-tidy  .gitignore  .lefthook.yaml  AGENTS.md  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: merge.yaml
.zed/: settings.json
DictypeFcitx/: CMakeLists.txt  dictype.conf.in
DictypeFcitx/src/: DictypeConfig.h  DictypeFcitx.cpp  DictypeFcitx.h  DictypeLog.h  DictypeState.cpp  DictypeState.h  DictypeState.test.cpp  GrpcClient.cpp  GrpcClient.h
crates/base-client/: Cargo.toml  build.rs
crates/base-client/src/: asr_client.rs  asr_client_factory.rs  audio_stream.rs  grpc_server.rs  lib.rs  transcribe_stream.rs
crates/config-tool/: Cargo.toml
crates/config-tool/src/: config_store.rs  config_store_error.rs  lib.rs  profile_config.rs
crates/dictyped/: Cargo.toml
crates/dictyped/assets/: dictyped.service
crates/dictyped/src/: audio_stream.rs  client.rs  client_store.rs  error.rs  main.rs  service.rs  service_state.rs  session_stream.rs
crates/paraformer-v2-client/: Cargo.toml
crates/paraformer-v2-client/src/: client.rs  client_factory.rs  config.rs  error.rs  lib.rs  types.rs
crates/pcm-playback-recorder/: Cargo.toml
crates/pcm-playback-recorder/src/: lib.rs
crates/pulseaudio-recorder/: Cargo.toml  build.rs
crates/pulseaudio-recorder/src/: config.rs  error.rs  lib.rs  recorder.rs
crates/pw-record-recorder/: Cargo.toml
crates/pw-record-recorder/src/: lib.rs
crates/qwen-v3-client/: Cargo.toml  build.rs
crates/qwen-v3-client/src/: client.rs  client_factory.rs  client_state.rs  config.rs  error.rs  lib.rs  types.rs
infra/ci/: check-cpp.sh  check-rust.sh
infra/dev/: fix-cpp.sh  fix-rust.sh  stop.sh  transcribe.sh
proto/: dictype.proto
