[package]
name = "dictyped"
version.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
base-client = { path = "../base-client" }
paraformer-v2-client = { path = "../paraformer-v2-client" }
qwen-v3-client = { path = "../qwen-v3-client" }
config-tool = { path = "../config-tool" }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util"] }
tokio-stream = { workspace = true, features = [] }
tokio-util = { workspace = true }
futures-util = { workspace = true, default-features = false, features = ["sink", "std"] }
pin-project-lite = { workspace = true }

libc = "0.2.181"
anyhow = { workspace = true }
thiserror = { workspace = true }

# Grpc
prost = { workspace = true }
tonic = { workspace = true, features = ["codegen", "transport", "server", "router"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
