[package]
name = "pw-record-recorder"
version.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
base-client = { path = "../base-client" }

futures-util = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["process", "io-util", "rt"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

tracing = { workspace = true }
